cambios en la url

--- a/package.json
+++ b/package.json
@@ -30,6 +30,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/angular-ui/ui-calendar.git"
+    "url": "git://github.com/iscluise/ui-calendar"
   }
 }
